# tnt

./: .clangd  .gitignore  CMakeLists.txt  README.md  TEMP  TODO.md  project.4coder
assets/shaders/: 2d_gs.glsl  2d_vs.glsl  3d_vs.glsl  base_fs.glsl  base_vs.glsl  debug_vs.glsl  default_fs.glsl  default_vs.glsl  grid_fs.gls  grid_vs.gls
code/: test_callbacks.c  test_memory.c  tnt.c  tnt.h  tnt_app.c  tnt_app.h  tnt_application.c  tnt_application.h  tnt_base_types.h  tnt_camera.c  tnt_camera.h  tnt_entity.c  tnt_entity.h  tnt_game.c  tnt_global.h  tnt_linked_list.c  tnt_linked_list.h  tnt_logger.c  tnt_logger.h  tnt_math.c  tnt_math.h  tnt_memory_arena.c  tnt_memory_arena.h  tnt_net.c  tnt_net.h  tnt_os.c  tnt_os.h  tnt_os_input.c  tnt_os_input.h  tnt_os_linux_entry.c  tnt_os_linux_impl.c  tnt_os_linux_window.c  tnt_os_main.c  tnt_os_main.h  tnt_os_window.c  tnt_os_window.h  tnt_os_windows_entry.c  tnt_os_windows_impl.c  tnt_os_windows_main.c  tnt_platform.h  (+14 more)
code/libs/render/: CMakeLists.txt  lib_render_opengl.c  lib_render_opengl.h
code/modules/render/: CMakeLists.txt  render_opengl.c  render_opengl.h
code/render/: CMakeLists.txt  render_opengl.c  render_opengl.h
tools/: build-linux.sh  build.sh  build_linux.sh  run_linux.sh
